@@ -218,6 +218,7 @@ class TestResultFileBinary:
         model_file = os.path.join(get_files_path(), 'Modelica', 'NegatedAlias.mo')
         name = compile_fmu("NegatedAlias", model_file)
         name = compile_fmu("NegatedAlias", model_file, target="cs", compile_to="NegatedAliasCS.fmu")
+        name = compile_fmu("NegatedAlias", model_file, version=2.0, target="cs", compile_to="NegatedAliasCS2.fmu")
         model_file = os.path.join(get_files_path(), 'Modelica', 'ParameterAlias.mo')
         name = compile_fmu("ParameterAlias", model_file)
     
@@ -240,6 +241,13 @@ class TestResultFileBinary:
         res = model.simulate(options=opts)
         
         nose.tools.assert_almost_equal(model.get("p2"), res["p2"][0])
+        
+    @testattr(stddist_base = True)
+    def test_integer_start_time(self):
+        model = load_fmu("NegatedAliasCS2.fmu")
+        
+        #Assert that there is no exception when reloading the file
+        res = model.simulate(start_time=0)
     
     @testattr(stddist_base = True)
     def test_variable_alias(self):
